fix(style): center align text in form title

--- a/portfolio/apps/webchat/static/webchat/css/style.css
+++ b/portfolio/apps/webchat/static/webchat/css/style.css
@@ -59,6 +59,7 @@
     flex-direction: column;
     width: 200px;
     margin-top: 25px;
+    text-align: center;
 }
 
 .form-title#RegisterTitle {
